@@ -2,6 +2,11 @@ CHANGELOG
 =========
 
 
+2021-09-26
+----------
+### Changelog extractor
+* GitHub extraction: Support Source URLs with `archive/refs/tags/...` instead of `archive/...`.
+
 2021-09-24
 ----------
 ### Changelog extractor
